--- a/english_to_ipa_translator/public/index.html
+++ b/english_to_ipa_translator/public/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta
-    name="viewport"
-    content="minimum-scale=1, initial-scale=1, width=device-width"
-  />
+      name="viewport"
+      content="minimum-scale=1, initial-scale=1, width=device-width"
+    />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
@@ -27,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>English to IPA translator</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
